fixed layout issue on opt out page at 300px screen size

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1946,6 +1946,13 @@ justify-content: center;
     text-align: start;
     padding-left: 1rem;
     padding-right: 1rem;
+    width: 90%;
+
+    code {
+      word-wrap: break-word;
+      word-break: break-all;
+      white-space: normal;
+    }
 
     h3 {
       margin-bottom: 1rem;
